# bot-crypto-coin

./: .env.example  AUTOTUNE.md  DEPLOY.md  Login.txt  README.md  autotune.py  backtest.py  bot.py  dashboard.html  deploy.py  install.sh  pyproject.toml  requirements-dev.txt  requirements.txt  scheduler.py
bot_crypto_coin.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
logs/: schedule_state.json
src/: __init__.py  bot.py  config.py  exchange.py  indicators.py  logger.py  metrics.py  mtf.py  notifier.py  optimizer.py  position_sizing.py  reconnect.py  report.py  scheduler.py  simulation.py  strategy.py  trailing_stop.py
tests/: test_mtf.py  test_simulation.py  test_strategy_strings.py
